--- a/maveneclipse/res/values/strings.xml
+++ b/maveneclipse/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello maveneclipse!</string>
+    <string name="hello">"Hello, the date is %s!"</string>
     <string name="app_name">maveneclipse</string>
 </resources>
