Adding some RoboGuice functional tests, based on Robolectric testsé

--- a/AndroidAnnotations/functional-test-1-5/res/values/strings.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/values/strings.xml
@@ -19,4 +19,5 @@
 <resources>
     <string name="hello">Hello android-functional-test-1-5!</string>
     <string name="app_name">android-functional-test-1-5</string>
+    <string name="injected_activity_caption">Roboguice Activity tested with Robolectric</string>    
 </resources>
