Convention over configuration now takes care of camel case to snake case conversion. Fixes issue 111.

--- a/AndroidAnnotations/functional-test-1-5/res/values/strings.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/values/strings.xml
@@ -19,5 +19,7 @@
 <resources>
     <string name="hello">Hello android-functional-test-1-5!</string>
     <string name="app_name">android-functional-test-1-5</string>
-    <string name="injected_activity_caption">Roboguice Activity tested with Robolectric</string>    
+    <string name="injected_activity_caption">Roboguice Activity tested with Robolectric</string>
+    
+    <string name="injected_string">test</string>
 </resources>
