--- a/AndroidAnnotations/functional-test-1-5/res/values/strings.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/values/strings.xml
@@ -18,6 +18,7 @@
 -->
 <resources>
     <string name="hello">Hello android-functional-test-1-5!</string>
+    <string name="hello_html"><![CDATA[Hello <b>android-functional-test-1-5</b>!]]></string>
     <string name="app_name">android-functional-test-1-5</string>
     <string name="injected_activity_caption">Roboguice Activity tested with Robolectric</string>
     
