Added new tests for @ItemClick annotation.

--- a/AndroidAnnotations/functional-test-1-5/res/values/strings.xml
+++ b/AndroidAnnotations/functional-test-1-5/res/values/strings.xml
@@ -24,4 +24,16 @@
     <string name="injected_activity_caption">Roboguice Activity tested with Robolectric</string>
     
     <string name="injected_string">test</string>
+
+    <string-array name="planets_array">
+        <item>Mercury</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Neptune</item>
+    </string-array>
+
 </resources>
