Update sample projects name

--- a/examples/RoboGuiceExample/res/values/strings.xml
+++ b/examples/RoboGuiceExample/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">RoboGuiceExample</string>
+
+    <string name="app_name">AA-sample-RoboGuiceExample</string>
+
 </resources>
