--- a/examples/maveneclipse/res/values/strings.xml
+++ b/examples/maveneclipse/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="hello">"Hello, the date is %s!"</string>
-    <string name="app_name">maveneclipse</string>
+    <string name="app_name">AA-sample-maveneclipse</string>
+
 </resources>
